Asm3/initial_run/src/main/bkit/parser/.antlr/BKITParser.py
# Generated from /Users/kietteik/Documents/BKU_Stored/HK1_2020-2021/PPL/Asm3/initial_run/src/main/bkit/parser/BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'+.'", "'+'", "'-'", "'-.'", "'*'", "'*.'", 
                     "'\\'", "'\\.'", "'%'", "'!'", "'&&'", "'||'", "'=='", 
                     "'!='", "'<'", "'>'", "'<='", "'>='", "'=/='", "'<.'", 
                     "'>.'", "'<=.'", "'>=.'", "'['", "']'", "'('", "')'", 
                     "':'", "'.'", "','", "';'", "'{'", "'}'", "'='", "'Body'", 
                     "'Break'", "'Continue'", "'Do'", "'Else'", "'ElseIf'", 
                     "'EndBody'", "'EndIf'", "'EndFor'", "'EndWhile'", "'For'", 
                     "'Function'", "'If'", "'Parameter'", "'Return'", "'Then'", 
                     "'Var'", "'While'", "'True'", "'False'", "'EndDo'" ]

    symbolicNames = [ "<INVALID>", "FLOATLIT", "INTLIT", "BOOLLIT", "STRING", 
                      "ADDF", "ADD", "SUB", "SUBF", "MUL", "MULF", "DIV", 
                      "DIVF", "MOD", "NOT", "CONJ", "DISJ", "EQUAL", "NEQUAL", 
                      "LT", "GT", "LTE", "GTE", "NEQF", "LTF", "GTF", "LTEF", 
                      "GTEF", "LSB", "RSB", "LP", "RP", "CL", "DOT", "CM", 
                      "SM", "LCB", "RCB", "ASSIGN", "BODY", "BREAK", "CONTINUE", 
                      "DO", "ELSE", "ELSEIF", "ENDBODY", "ENDIF", "ENDFOR", 
                      "ENDWHILE", "FOR", "FUNCTION", "IF", "PARAMETER", 
                      "RETURN", "THEN", "VAR", "WHILE", "TRUE", "FALSE", 
                      "ENDDO", "ID", "COMMENT", "WS", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_varDecList = 1
    RULE_varDec = 2
    RULE_varList = 3
    RULE_varLit = 4
    RULE_varArray = 5
    RULE_varArrayIndex = 6
    RULE_funcDecList = 7
    RULE_funcDec = 8
    RULE_paramSection = 9
    RULE_paramList = 10
    RULE_param = 11
    RULE_bodySection = 12
    RULE_varDecWithStatementList = 13
    RULE_nullableStatementList = 14
    RULE_statementList = 15
    RULE_oneStatement = 16
    RULE_variable = 17
    RULE_assignStatement = 18
    RULE_ifStatement = 19
    RULE_forStatement = 20
    RULE_whileStatement = 21
    RULE_dowhileStatement = 22
    RULE_breakStatement = 23
    RULE_continueStatement = 24
    RULE_callStatement = 25
    RULE_returnStatement = 26
    RULE_relational = 27
    RULE_expression = 28
    RULE_exp1 = 29
    RULE_exp2 = 30
    RULE_exp3 = 31
    RULE_exp4 = 32
    RULE_exp5 = 33
    RULE_exp6 = 34
    RULE_exp7 = 35
    RULE_arrayElement = 36
    RULE_indexOperators = 37
    RULE_funcCall = 38
    RULE_expList = 39
    RULE_literal = 40
    RULE_array = 41

    ruleNames =  [ "program", "varDecList", "varDec", "varList", "varLit", 
                   "varArray", "varArrayIndex", "funcDecList", "funcDec", 
                   "paramSection", "paramList", "param", "bodySection", 
                   "varDecWithStatementList", "nullableStatementList", "statementList", 
                   "oneStatement", "variable", "assignStatement", "ifStatement", 
                   "forStatement", "whileStatement", "dowhileStatement", 
                   "breakStatement", "continueStatement", "callStatement", 
                   "returnStatement", "relational", "expression", "exp1", 
                   "exp2", "exp3", "exp4", "exp5", "exp6", "exp7", "arrayElement", 
                   "indexOperators", "funcCall", "expList", "literal", "array" ]

    EOF = Token.EOF
    FLOATLIT=1
    INTLIT=2
    BOOLLIT=3
    STRING=4
    ADDF=5
    ADD=6
    SUB=7
    SUBF=8
    MUL=9
    MULF=10
    DIV=11
    DIVF=12
    MOD=13
    NOT=14
    CONJ=15
    DISJ=16
    EQUAL=17
    NEQUAL=18
    LT=19
    GT=20
    LTE=21
    GTE=22
    NEQF=23
    LTF=24
    GTF=25
    LTEF=26
    GTEF=27
    LSB=28
    RSB=29
    LP=30
    RP=31
    CL=32
    DOT=33
    CM=34
    SM=35
    LCB=36
    RCB=37
    ASSIGN=38
    BODY=39
    BREAK=40
    CONTINUE=41
    DO=42
    ELSE=43
    ELSEIF=44
    ENDBODY=45
    ENDIF=46
    ENDFOR=47
    ENDWHILE=48
    FOR=49
    FUNCTION=50
    IF=51
    PARAMETER=52
    RETURN=53
    THEN=54
    VAR=55
    WHILE=56
    TRUE=57
    FALSE=58
    ENDDO=59
    ID=60
    COMMENT=61
    WS=62
    ERROR_CHAR=63
    UNCLOSE_STRING=64
    ILLEGAL_ESCAPE=65
    UNTERMINATED_COMMENT=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def varDecList(self):
            return self.getTypedRuleContext(BKITParser.VarDecListContext,0)


        def funcDecList(self):
            return self.getTypedRuleContext(BKITParser.FuncDecListContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.VAR:
                self.state = 84
                self.varDecList()


            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.FUNCTION:
                self.state = 87
                self.funcDecList()


            self.state = 90
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDecListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDec(self):
            return self.getTypedRuleContext(BKITParser.VarDecContext,0)


        def varDecList(self):
            return self.getTypedRuleContext(BKITParser.VarDecListContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_varDecList




    def varDecList(self):

        localctx = BKITParser.VarDecListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_varDecList)
        try:
            self.state = 96
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.varDec()
                self.state = 93
                self.varDecList()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.varDec()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def CL(self):
            return self.getToken(BKITParser.CL, 0)

        def varList(self):
            return self.getTypedRuleContext(BKITParser.VarListContext,0)


        def SM(self):
            return self.getToken(BKITParser.SM, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_varDec




    def varDec(self):

        localctx = BKITParser.VarDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(BKITParser.VAR)
            self.state = 99
            self.match(BKITParser.CL)
            self.state = 100
            self.varList()
            self.state = 101
            self.match(BKITParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self):
            return self.getToken(BKITParser.CM, 0)

        def varList(self):
            return self.getTypedRuleContext(BKITParser.VarListContext,0)


        def varLit(self):
            return self.getTypedRuleContext(BKITParser.VarLitContext,0)


        def varArray(self):
            return self.getTypedRuleContext(BKITParser.VarArrayContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_varList




    def varList(self):

        localctx = BKITParser.VarListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varList)
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 103
                    self.varLit()
                    pass

                elif la_ == 2:
                    self.state = 104
                    self.varArray()
                    pass


                self.state = 107
                self.match(BKITParser.CM)
                self.state = 108
                self.varList()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 110
                    self.varLit()
                    pass

                elif la_ == 2:
                    self.state = 111
                    self.varArray()
                    pass


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarLitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def INTLIT(self):
            return self.getToken(BKITParser.INTLIT, 0)

        def FLOATLIT(self):
            return self.getToken(BKITParser.FLOATLIT, 0)

        def BOOLLIT(self):
            return self.getToken(BKITParser.BOOLLIT, 0)

        def STRING(self):
            return self.getToken(BKITParser.STRING, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_varLit




    def varLit(self):

        localctx = BKITParser.VarLitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varLit)
        self._la = 0 # Token type
        try:
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.match(BKITParser.ID)
                self.state = 117
                self.match(BKITParser.ASSIGN)
                self.state = 118
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.FLOATLIT) | (1 << BKITParser.INTLIT) | (1 << BKITParser.BOOLLIT) | (1 << BKITParser.STRING))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.match(BKITParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarArrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def varArrayIndex(self):
            return self.getTypedRuleContext(BKITParser.VarArrayIndexContext,0)


        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def array(self):
            return self.getTypedRuleContext(BKITParser.ArrayContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_varArray




    def varArray(self):

        localctx = BKITParser.VarArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varArray)
        try:
            self.state = 129
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.match(BKITParser.ID)
                self.state = 123
                self.varArrayIndex()
                self.state = 124
                self.match(BKITParser.ASSIGN)
                self.state = 125
                self.array()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.match(BKITParser.ID)
                self.state = 128
                self.varArrayIndex()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarArrayIndexContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self):
            return self.getToken(BKITParser.LSB, 0)

        def INTLIT(self):
            return self.getToken(BKITParser.INTLIT, 0)

        def RSB(self):
            return self.getToken(BKITParser.RSB, 0)

        def varArrayIndex(self):
            return self.getTypedRuleContext(BKITParser.VarArrayIndexContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_varArrayIndex




    def varArrayIndex(self):

        localctx = BKITParser.VarArrayIndexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_varArrayIndex)
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.match(BKITParser.LSB)
                self.state = 132
                self.match(BKITParser.INTLIT)
                self.state = 133
                self.match(BKITParser.RSB)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.match(BKITParser.LSB)
                self.state = 135
                self.match(BKITParser.INTLIT)
                self.state = 136
                self.match(BKITParser.RSB)
                self.state = 137
                self.varArrayIndex()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDecListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcDec(self):
            return self.getTypedRuleContext(BKITParser.FuncDecContext,0)


        def funcDecList(self):
            return self.getTypedRuleContext(BKITParser.FuncDecListContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_funcDecList




    def funcDecList(self):

        localctx = BKITParser.FuncDecListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_funcDecList)
        try:
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.funcDec()
                self.state = 141
                self.funcDecList()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.funcDec()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def CL(self):
            return self.getToken(BKITParser.CL, 0)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def paramSection(self):
            return self.getTypedRuleContext(BKITParser.ParamSectionContext,0)


        def bodySection(self):
            return self.getTypedRuleContext(BKITParser.BodySectionContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_funcDec




    def funcDec(self):

        localctx = BKITParser.FuncDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_funcDec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(BKITParser.FUNCTION)
            self.state = 147
            self.match(BKITParser.CL)
            self.state = 148
            self.match(BKITParser.ID)
            self.state = 149
            self.paramSection()
            self.state = 150
            self.bodySection()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamSectionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def CL(self):
            return self.getToken(BKITParser.CL, 0)

        def paramList(self):
            return self.getTypedRuleContext(BKITParser.ParamListContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_paramSection




    def paramSection(self):

        localctx = BKITParser.ParamSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_paramSection)
        try:
            self.state = 156
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.PARAMETER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.match(BKITParser.PARAMETER)
                self.state = 153
                self.match(BKITParser.CL)
                self.state = 154
                self.paramList()
                pass
            elif token in [BKITParser.BODY]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(BKITParser.ParamContext,0)


        def CM(self):
            return self.getToken(BKITParser.CM, 0)

        def paramList(self):
            return self.getTypedRuleContext(BKITParser.ParamListContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_paramList




    def paramList(self):

        localctx = BKITParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paramList)
        try:
            self.state = 163
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.param()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 159
                self.param()
                self.state = 160
                self.match(BKITParser.CM)
                self.state = 161
                self.paramList()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def varArrayIndex(self):
            return self.getTypedRuleContext(BKITParser.VarArrayIndexContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_param




    def param(self):

        localctx = BKITParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_param)
        try:
            self.state = 168
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 165
                self.match(BKITParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 166
                self.match(BKITParser.ID)
                self.state = 167
                self.varArrayIndex()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodySectionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def CL(self):
            return self.getToken(BKITParser.CL, 0)

        def varDecWithStatementList(self):
            return self.getTypedRuleContext(BKITParser.VarDecWithStatementListContext,0)


        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_bodySection




    def bodySection(self):

        localctx = BKITParser.BodySectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_bodySection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.match(BKITParser.BODY)
            self.state = 171
            self.match(BKITParser.CL)
            self.state = 172
            self.varDecWithStatementList()
            self.state = 173
            self.match(BKITParser.ENDBODY)
            self.state = 174
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDecWithStatementListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nullableStatementList(self):
            return self.getTypedRuleContext(BKITParser.NullableStatementListContext,0)


        def varDecList(self):
            return self.getTypedRuleContext(BKITParser.VarDecListContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_varDecWithStatementList




    def varDecWithStatementList(self):

        localctx = BKITParser.VarDecWithStatementListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_varDecWithStatementList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.VAR:
                self.state = 176
                self.varDecList()


            self.state = 179
            self.nullableStatementList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NullableStatementListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statementList(self):
            return self.getTypedRuleContext(BKITParser.StatementListContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_nullableStatementList




    def nullableStatementList(self):

        localctx = BKITParser.NullableStatementListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_nullableStatementList)
        try:
            self.state = 183
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 181
                self.statementList()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass

